Fix reuse panel layout issues
The OOUI inline menu widget does not use ul/li anymore; user
class name to target CSS instead.

Mingle: https://wikimedia.mingle.thoughtworks.com/projects/multimedia/cards/838

--- a/resources/mmv/ui/mmv.ui.reuse.dialog.less
+++ b/resources/mmv/ui/mmv.ui.reuse.dialog.less
@@ -30,7 +30,7 @@
 			display: none;
 		}
 
-		li {
+      .oo-ui-optionWidget {
 			@tab-border-height: 3px;
 			@highlighted-tab-color: rgb(225, 243, 255);
 			@selected-tab-color: rgb(0, 113, 188);
